src/styles/list.css
*{
    margin: 0;
    padding: 0;
    border: 0;
}

.container{
    display: flex;
    flex-direction: row;
    width: 1000px;
    height: 80%;
    margin: 0 auto;
    padding: 10px;
}

.button-createList{
    all: unset;
    background: url(../assets/ico/add.svg) no-repeat top right;
    background-size: cover;
    width: 50px;
    height: 50px;
}

.list{
    width: 15em;
    min-width: 12em;
    min-height: 50px;
    overflow: auto;
    margin: 10px;
    background-color: white;
    border: blue 1px solid;
}

.list__header{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    height: 30px;
    padding: 12px;
    border-bottom: blue 3px solid;
}

.list__title{
    margin: auto 0;
    padding: 5px;
}

.list__content{
    display: flex;
    flex-direction: column;
    min-height: 50px;
}
.item{
    display: flex;
    flex-direction: row;
    border: black 1px solid;
    padding: 10px;
    justify-content: space-around;
}
.item__text{
    margin: auto 0;
    padding: 5px;
}

.button-createList :hover{
    cursor: pointer;
}

.button_createItem{
    all: unset;
    background: url(../assets/ico/add-blue.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
    margin: 10px auto;
    cursor: pointer;
}

.button_createItem :hover{
    cursor: pointer;
}

.list__header__button__edit{
    all: unset;
    background: url(../assets/ico/edit.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
}

.list__header__button__delete{
    all: unset;
    background: url(../assets/ico/delete.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.item__button__open{
    all: unset;
    background: url(../assets/ico/open.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.item__button__delete{
    all: unset;
    background: url(../assets/ico/delete.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
    cursor: pointer;
}


.menu-container{
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
}

.menu{
    top: 0;
    left: 0;
    background-color: rgb(168, 168, 168);
    width: 500px;
    min-height: 300px;
    margin: auto;
    padding: 1em;
    border-radius: 4px;
}

.menu-container__title{
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 100px;
}
.menu-container__button-closePopup{
    all: unset;
    background: url(../assets/ico/delete.svg) no-repeat top right;
    background-size: cover;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.menu__description{
    padding: 10px;
}

/*комментарии*/

.menu__container__comments{
    width: 100%;
    height: 90%;
}

.menu__input{
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-top: 0.5em;
    padding: 0.5em;
    font-size: 0.8em;
}

.menu__button{
    background-color: #505050;
    color: white;
    border: none;
    border-radius: 4px;
    padding: 0.5em;
    margin-top: 0.5em;
}

.menu__comments{
    width: 100%;
    height: 100px;
}

.comment{
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-top: 0.5em;
    padding: 0.5em;
    font-size: 0.8em;
}

